fixed button styles on mobile

--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
 	padding-top: 50px;
 	padding-bottom: 50px;
 }
+input {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
 h1 {
 	font-weight: 400;
 	line-height: 1.5;
